<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>t1_nav</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sfr2023@todo.todo">sfr2023</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>geometry_msgs</depend>

  <build_depend>t1_interfaces</build_depend>
  <build_export_depend>t1_interfaces</build_export_depend>
  <exec_depend>t1_interfaces</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>nav2_map_server</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>t1_rover</test_depend>
  <test_depend>t1_ui</test_depend>
  <test_depend>nav2_planner</test_depend>
  <test_depend>nav2_costmap_2d</test_depend>
  <test_depend>explore_lite</test_depend>
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
